base/baas-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baas-auth
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: auth
          image: ghcr.io/wkebaas/auth:v0.0.2
          ports:
            - containerPort: 3000
