base/baas-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baas-auth
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
